--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Smartcar Python SDK Demo</title>
+    <title>Smartcar Example Server</title>
     <style>
         body { 
             font-family: Arial, sans-serif; 
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Smartcar Python SDK Demo</h1>
+        <h1>Smartcar Example Server</h1>
         {{ content | safe }}
     </div>
 </body>
